SD-9044: Adding body min-width and min-height, also fixing counter text jumps.

--- a/flows/vast/src/css/style.css
+++ b/flows/vast/src/css/style.css
@@ -5,12 +5,14 @@ html, body {
   font-size: 12px;
   height: 100%;
   width: 100%;
-}
-
-html, body {
   margin: auto;
   padding: 0px;
   text-align: center;
+}
+
+body{
+  min-width: 300px;
+  min-height: 250px;
 }
 
 h1 {
@@ -102,7 +104,7 @@ h1 {
 }
 
 #phoneEntryWrapper{
-  min-height: 190px;
+  min-height: 250px;
 }
 
 #videoOverlay, #loadingOverlay{
